src/objects/CPA_Order_Dispatch__c.object
<CustomObject>
    <fields>
        <fullName>CPA_Order__c</fullName>
        <label>CPA Order</label>
        <referenceTo>CPA_Order__c</referenceTo>
        <relationshipLabel>CPA Order Dispatches</relationshipLabel>
        <relationshipName>CPA_Order_Dispatches</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dispatch_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Dispatch Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Baskets__c</fullName>
        <label>Number of Baskets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Kilos__c</fullName>
        <label>Number of Kilos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Presentation_Units__c</fullName>
        <label>Number of Presentation Units</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_of_Presentation__c</fullName>
        <label>Unit of Presentation</label>
        <picklist>
            <picklistValues>
                <fullName>Bags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sacks</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>CPA Order Dispatch</label>
    <nameField>
        <displayFormat>CODN-{00000}</displayFormat>
        <label>CPA Order Dispatch Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPA Order Dispatches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>